--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 version: '3.3'
 services:
-  database:
-    image: postgres
-    container_name: 'postgres'
-    restart: always
-    env_file:
-      - ./env/database.env
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres:/var/lin/postgresql/data
+
+
+  # database:
+  #   image: postgres
+  #   container_name: 'postgres'
+  #   restart: always
+  #   env_file:
+  #     - ./env/database.env
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     - postgres:/var/lin/postgresql/data
 
 
   pgadmin:
@@ -20,8 +22,8 @@ services:
       - ./env/pgadmin.env
     ports:
       - "5050:80"
-    depends_on:
-      - database
+    # depends_on:
+    #   - database
 
 
   backend:
@@ -31,10 +33,10 @@ services:
       context: ./backend
     ports:
       - "80:80"
-    depends_on: 
-      - database
+    # depends_on: 
+    #   - database
 
 
-volumes:
-  postgres:
+# volumes:
+#   postgres:
 
